Exercícios do capítulo 5 aula 2

--- a/exercicios/ex002/index.html
+++ b/exercicios/ex002/index.html
@@ -23,5 +23,9 @@
         &uparrow;
         &uarr;
     </p>
+    <p>Vamos adicionar alguns emoji:
+        &#x1F596;
+        &#x1F913;
+    </p>
 </body>
 </html>
