Corrigindo semântica do código.

--- a/exercicios/ex010/Noticias/pg03.html
+++ b/exercicios/ex010/Noticias/pg03.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Terceira página</h1>
     <p>Esta é a terceira página</p>
-    <a href="file:///C:/Users/mat_m/Documents/Meusprojetos/HTML-CSS/curso-HTML-CSS/exercicios/ex010/index.html">Voltar paga a primeira página</a>
+    <a href="../index.html" target="_self" rel="prev">Voltar paga a primeira página</a>
 </body>
 </html>
