--- a/exercicios/ex010/pg02.html
+++ b/exercicios/ex010/pg02.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Esta é a segnda página do meu site</h1>
         <p>A segunda página está aqui</p>
-        <p>Esta página é um oferecimento de <a href="https://www.hostnet.com.br/" target="_blank">Hostnet</a></p>
-        <p><a href="index.html">Voltar para a primeira página</a></p>
+        <p>Esta página é um oferecimento de <a href="https://www.hostnet.com.br/" target="_blank" rel="external">Hostnet</a></p>
+        <p><a href="index.html" target="_self" rel="prev">Voltar para a primeira página</a></p>
 </body>
 </html>
