--- a/Modulo-02/Desafios/d010/index.html
+++ b/Modulo-02/Desafios/d010/index.html
@@ -4,41 +4,136 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <style>
+    @font-face {
+        font-family: 'idroid';
+        src: url('fontes/idroid.otf') format('opentype');
+    }
+
     body {
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 0px;
+        text-align: justify;
+        background-color: #81E2AB;
+    }
+
+    header {
+        padding: 10px;
+        width: auto;
+        text-align: center;
+        background-color: #195C32;
+        color: white;
+    }
+
+    nav {
+        text-align: left;
+    }
+
+    main {
+        background-color: white;
+        width: 900px;
         margin: auto;
+        box-shadow: 2px 2px 10px;
+        padding: 20px 20px 1px 20px;
+        border: 450px;
+        border-color: #043D1D;
+    }
+
+    main > h1 {
+        font-family: 'idroid';
+        color: #195C32;
+    }
+
+    main > h2 {
+        font-family: 'idroid';
+        color: #195C32;
+    }
+
+    div {
+        background-color: #043D1D;
+        padding: 10px;
+    }
+
+    aside {
+        background-color: #81E2AB;
+        border-radius: 10px;
+        margin: 20px;
+        box-shadow: 3px 3px 5px;
+    }
+
+    aside > h1 {
+        padding: 0px 10px;
+    }
+
+    aside > p {
+        padding: 0px 10px;
+    }
+
+    #extra {
+        background-color: #195B35;
+        border-radius: 10px 10px 0px 0px;
+        color: white;
+    }
+
+    .lista {
+        display: inline-block;
+        list-style: none;
+        padding: 0px 190px 0px 10px;
+        margin: 0px;
+    }
+
+    .lista li::before {
+        content: '🗸';
+    }
+
+    footer {
+        background-color: #043D1D;
+        color: white;
+        text-align: center;
+        margin: 20px 0px 0px 0px;
+    }
+
+    footer > p {
+        margin: 0px;
+    }
+
+    p {
+        text-indent: 2em;
     }
 </style>
 <body>
     <header>
-        <h1>Curiosidades de Tecnologia</h1>
+        <h1>CURIOSIDADES DE TECNOLOGIA</h1>
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Notícias</a>
+            <a href="#">Curiosidades</a>
+            <a href="#">Fale Conosco</a>
+        </nav>
     </header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
-    </nav>
     <main>
         <h1>História do Mascote do Android</h1>
         <p>Provavelmente você sabe que o sistema operacional <a href="https://www.android.com/intl/pt-BR_br/" target="_blank" rel="external">Android</a>, mantido pelo <a href="https://www.google.com/webhp?hl=pt-BR&ictx=2&sa=X&ved=0ahUKEwjTiJ6zwvmCAxVbpJUCHRCzDOYQPQgJ" target="_blank" rel="external">Google</a> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
         <h2>A primeira versão</h2>
         <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" rel="external">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank" rel="external">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
-        <img src="d010/imagens/dan-droids.png" alt="Dan droids, primeira versão do mascote do sistema operacional da Google.">
+        <img src="imagens/dan-droids.png" alt="Dan droids, primeira versão do mascote do sistema operacional da Google.">
         <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <a href="https://www.google.com/search?q=dandroids&rlz=1C1CHBD_pt-PTBR912BR912&oq=dandr&gs_lcrp=EgZjaHJvbWUqDggAEEUYJxg7GIAEGIoFMg4IABBFGCcYOxiABBiKBTIGCAEQRRg5Mg0IAhAuGK8BGMcBGIAEMgcIAxAAGIAEMg8IBBAuGAoYrwEYxwEYgAQyCQgFEAAYChiABDIGCAYQRRg8MgYIBxBFGDzSAQgyMDQ4ajBqNKgCALACAA&sourceid=chrome&ie=UTF-8" target="_blank" rel="external">Dandroids</a>.</p>
         <h2>Surge um novo mascote</h2>
         <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/" target="_blank" rel="external">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
-        <img src="d010/imagens/irina-blok.jpg" alt="irina Block, ilustradora do mascote do Android">
+        <img src="imagens/irina-blok.jpg" alt="irina Block, ilustradora do mascote do Android">
         <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <a href="https://blog.google/products/android/modern-look/" target="_blank" rel="external">Bugdroid</a>, o novo mascote do Android.</p>
-        <img src="d010/imagens/bugdroid.png" alt="Bugdroid, versão criada pela ilustradora russa Irina Block.">
+        <img src="imagens/bugdroid.png" alt="Bugdroid, versão criada pela ilustradora russa Irina Block.">
         <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=xNf4HMc-qEk4haK5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <div class="video">
+            <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=xNf4HMc-qEk4haK5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
         <aside>
             <h1 id="extra">Quer aprender mais?</h1>
             <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
-            <ul>
+            <ul class="lista">
                 <li>1.5 - Cupcake</li>
                 <li>1.6 - Donut</li>
                 <li>3.0 - Eclair</li>
@@ -46,6 +141,8 @@
                 <li>2.3 - Gingerbread</li>
                 <li>3.0 - Honeycomb</li>
                 <li>4.0 - Ice Cream Sandwich</li>
+            </ul>
+            <ul class="lista">
                 <li>4.1 - Jelly Bean</li>
                 <li>4.4 - KitKat</li>
                 <li>5.0 - Lolipop</li>
