--- a/Modulo-04/Exercícios/ex024/iframe003.html
+++ b/Modulo-04/Exercícios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni doloremque neque id eaque exercitationem aliquid sit velit eum dignissimos, officia optio totam unde atque fuga obcaecati aperiam quae rerum animi? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias unde omnis numquam earum culpa consequatur aspernatur ratione consectetur commodi suscipit totam ullam autem sed fugit nobis praesentium, quod magni doloribus?</p>
 
-    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas est nihil optio, mollitia ipsam nesciunt repellendus. Explicabo ex ipsa voluptates, aut expedita veniam aspernatur dolore autem perferendis voluptate eos in.</p>">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas est nihil optio, mollitia ipsam nesciunt repellendus. Explicabo ex ipsa voluptates, aut expedita veniam aspernatur dolore autem perferendis voluptate eos in.</p><img src='imagens/cursoemvideo.png'>">
         <p>Infelizmente seu navegador não é compatível com isso</p>
     </iframe>
 
